--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "bingus-chat",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "scripts": {
     "build": "cd client && npm install && npm run build",
     "start": "cd server && npm install && node server.js",
-    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\""
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
+    "heroku-postbuild": "npm run build"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
